--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
-body {background-color:black;font-family:arial;color:white}
-h1{color:grey;font-family:verdana}
-
-.maindiv {
-    background-color:white;
-    color:black;
-    width:300px;
-    padding:20px;
-    border-radius:25px;
-    align-items:center
+body {background-color:tan;}
+h1{color:green;}
+body {background-color:black;}
+h1{color:grey;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.maindiv{
+    background-color: white;
+    color: black;
+    width: 300px;
+    padding: 20px;
+    border-radius: 25px;
+    margin: auto;
+}
+
+mark{
+    background-color: yellow;
+}
